creditas-sf/force-app/main/default/objects/AccountRelationships__c/AccountRelationships__c.object-meta.xml
<CustomObject>
    <label>Conta Relacionada</label>
    <nameField>
        <displayFormat>AccRel-{00000000}</displayFormat>
        <label>Código da Conta Relacionada</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contas Relacionadas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>