creditas-sf/force-app/main/default/objects/AccountRelationships__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Id referente ao sistema de origem da informação</description>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>