creditas-sf/force-app/main/default/objects/AccountRelationships__c/fields/PrimaryRelationship__c.field-meta.xml
<CustomField>
    <fullName>PrimaryRelationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta Principal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contas Relacionadas</relationshipLabel>
    <relationshipName>Contas_Relacionadas</relationshipName>
    <type>Lookup</type>
</CustomField>