creditas-sf/force-app/main/default/objects/AccountRelationships__c/fields/SecondaryRelationship__c.field-meta.xml
<CustomField>
    <fullName>SecondaryRelationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta Relacionada</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contas Relacionadas (Conta Relacionada)</relationshipLabel>
    <relationshipName>Contas_Relacionadas_Secundario</relationshipName>
    <type>Lookup</type>
</CustomField>