creditas-sf/force-app/main/default/objects/AccountRelationships__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Tipo de relacionamento entre as pessoas da conta</description>
    <label>Tipo de vínculo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPOUSE</fullName>
                <label>Cônjuge</label>
            </value>
            <value>
                <fullName>MOTHER</fullName>
                <label>Mãe</label>
            </value>
            <value>
                <fullName>FATHER</fullName>
                <label>Pai</label>
            </value>
            <value>
                <fullName>OFFSPRING</fullName>
                <label>Filho(a)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>